--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-https://discord.gg/JFbtszP <------ link do serwera dsc
+  <a href="https://discord.gg/JFbtszP">link do serwera dsc</a>
                                    <p>o gratulacje znalazles link do dodania bota(Covid-19) na swój serwer :D xd </p>
 <a href="https://discord.com/api/oauth2/authorize?client_id=766326500928258079&permissions=514112&scope=bot">Covid-19 BOT</a>
 </body>
