--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 </head>
 <body>
-  <a href="https://discord.gg/JFbtszP">link do serwera dsc</a>
+  <a href="https://discord.gg/JFbtszP" target="_blank">link do serwera dsc</a>
                                    <p>o gratulacje znalazles link do dodania bota(Covid-19) na swój serwer :D xd </p>
-<a href="https://discord.com/api/oauth2/authorize?client_id=766326500928258079&permissions=514112&scope=bot">Covid-19 BOT</a>
+<a href="https://discord.com/api/oauth2/authorize?client_id=766326500928258079&permissions=514112&scope=bot" target="_blank">Covid-19 BOT</a>
 </body>
 </html>
