--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <a href="https://discord.gg/JFbtszP" target="_blank">link do serwera dsc</a>
-                                   <p>o gratulacje znalazles link do dodania bota(Covid-19) na swój serwer :D xd </p>
-<a href="https://discord.com/api/oauth2/authorize?client_id=766326500928258079&permissions=514112&scope=bot" target="_blank">Covid-19 BOT</a>
+                                   <p>xd jel jel jel xd</p>
+
 </body>
 </html>
